--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <title></title>
 </head>
 <body>
-<script src="http://res.miku.us/res/js/jgy-2nd.js?v=123" charset="utf-8"></script>
+<script src="https://res.miku.us/res/js/jgy-2nd.js?v=123" charset="utf-8"></script>
 </body>
 </html>
