--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
-
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
 <title></title>
+<script src="//cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-<script src="https://res.miku.us/res/js/jgy-2nd.js?v=123" charset="utf-8"></script>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="col-xs-8"></div>
+    <div class="col-xs-4"></div>
+  </div>
+  <div class="row-fluid">
+    <div class="col-xs-8"></div>
+    <div class="col-xs-4"></div>
+  </div>
+  <div class="row-fluid">
+    <div class="col-xs-3"></div>
+    <div class="col-xs-9"></div>
+  </div>
+</div>
 </body>
 </html>
