--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title></title>
 <script src="//cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
 <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="//cdn.bootcss.com/jquery.pjax/1.9.1/jquery.pjax.min.js"></script>
 </head>
 <body>
 <div class="container-fluid">
