--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 <script>
   var url = 'http://fm.miku.us/loadOne';
+  var data = {};
   $.get(url, data, function(j){
     console.log(j);
   }, 'jsonp');
